chore: tweak app settings